lab1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp-lab1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
